Fixed text wrap issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -577,3 +577,7 @@ body {
     display: block;
     margin: 0 auto; /* Centers the image */
 }
+
+span {
+    white-space: nowrap;
+}
